--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "v2 of YouTube Channel Tracker (YTCTv2)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --maxWorkers=1",
     "dev": "ts-node-dev --respawn --pretty --transpile-only src/index.ts",
     "build": "tsc --build",
     "clean": "tsc --build --clean"
@@ -34,15 +34,25 @@
     "googleapis": "^87.0.0",
     "helmet": "^4.6.0",
     "logdna": "^3.5.2",
-    "redis": "^4.0.0-rc.1"
+    "redis": "^4.0.0-rc.1",
+    "redis-mock": "^0.56.3",
+    "sinon": "^11.1.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/preset-typescript": "^7.15.0",
     "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
+    "@types/redis-mock": "^0.17.0",
+    "babel-jest": "^27.2.0",
+    "jest": "^27.2.0",
+    "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
-    "typescript": "^4.4.2"
+    "typescript": "^4.4.3"
   }
 }
