--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "helmet": "^4.6.0",
     "logdna": "^3.5.2",
     "redis": "^4.0.0-rc.1",
+    "redis-js": "^0.1.2",
     "redis-mock": "^0.56.3",
     "sinon": "^11.1.2"
   },
@@ -49,8 +50,11 @@
     "@types/jest": "^27.0.1",
     "@types/node": "^16.7.13",
     "@types/redis-mock": "^0.17.0",
+    "@types/supertest": "^2.0.11",
     "babel-jest": "^27.2.0",
     "jest": "^27.2.0",
+    "superagent": "^6.1.0",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.5",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
