--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "redis": "^4.0.0-rc.1",
     "redis-js": "^0.1.2",
     "redis-mock": "^0.56.3",
-    "sinon": "^11.1.2"
+    "sinon": "^11.1.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
@@ -51,6 +52,7 @@
     "@types/node": "^16.7.13",
     "@types/redis-mock": "^0.17.0",
     "@types/supertest": "^2.0.11",
+    "@types/uuid": "^8.3.1",
     "babel-jest": "^27.2.0",
     "jest": "^27.2.0",
     "superagent": "^6.1.0",
